--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>ScreenSaverDVD</title>
   <style>
     #field {
       background-color: black;
@@ -22,11 +22,6 @@
       color: aliceblue;
       border-radius: 50%;
     }
-    #counter {
-        color: aliceblue;
-        font-size: 90px;
-        z-index: 5;
-    }
   </style>
 </head>
 <body>
@@ -35,7 +30,6 @@
         DVD
     </div>
   </div>
-  <div id="counter"></div>
   <script>
 
     let rect = document.querySelector('#rect')
@@ -48,39 +42,27 @@
 
     let invertX = 1
     let invertY = 1
-    let windowSize = {
-      height: document.documentElement.clientHeight,
-      width: document.documentElement.clientWidth
-    }
-    field.style.height = windowSize.height
-    field.style.width = windowSize.width
-
-    let counter = 0
-    
     let isMoving = true
-    
-    let step = 3
+    let speed = 3
     let ms = 1000/60
-
     let movement = setInterval(screenSaver, ms)
 
-    function stop(myInterval) {
-      clearInterval(myInterval);
-    }
-
-    document.addEventListener('mousedown', function() {
+    document.addEventListener('mousedown', () => {
       if (isMoving) {
-        stop(movement)
-        isMoving = false
+        clearInterval(movement)
       } else {
         movement = setInterval(screenSaver, ms)
-        isMoving = true
       }
+      isMoving = !isMoving
     })
+
+    function setFieldSize() {
+      field.style.height = document.documentElement.clientHeight
+      field.style.width = document.documentElement.clientWidth
+    }
 
     function scaleX(element) {
       element.style.height = element.style.lineHeight = element.clientHeight * 0.98 + 'px'
-      // if (element.style.height < element.style.fontSize) element.style.fontSize = element.style.height
       element.style.width = element.clientWidth * 1.01 + 'px'
     }
 
@@ -91,35 +73,30 @@
 
     function screenSaver() {
 
-      document.querySelector('#counter').textContent = counter
-
+      setFieldSize()
 
       if (rect.getBoundingClientRect().top < 0) {
         invertY = 1
         scaleX(rect)
-        counter++
       }
 
       if (rect.getBoundingClientRect().left < 0) {
         invertX = 1
         scaleY(rect)
-        counter++
       }
 
       if (rect.getBoundingClientRect().bottom > parseInt(field.style.height)) {
         invertY = -1
-        counter++
         scaleX(rect)
       }
 
       if (rect.getBoundingClientRect().right > parseInt(field.style.width)) {
         invertX = -1
-        counter++
         scaleY(rect)
       }
 
-      rectTop += (step * invertY)
-      rectLeft += (step * invertX)
+      rectTop += (speed * invertY)
+      rectLeft += (speed * invertX)
 
       rect.style.marginTop = rectTop
       rect.style.marginLeft = rectLeft
